--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <h1>Este é o título do arquivo.</h1>
 
-<p>Esse é o parágrafo do arquivo.</p>
+<p>Esse é o parágrafo do arquivo!</p>
+
+<div>
+    Div do arquivo.
+</div>
