--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <h1>Este é o título do arquivo.</h1>
 
+<h2>Subtítulo do arquivo</h2>
+
 <p>Esse é o parágrafo do arquivo.</p>
+
+<div>
+    Div do arquivo
+</div>
+
+<ul>
+    <li>Primeiro item</li>
+</ul>
